@@ -29,6 +29,7 @@ spaceStationMass=Space Station mass
 spaceStationMasses=Space Station masses
 scale=Scale
 show=Show
+reset=reset
 sun=Sun
 thousandEarthMasses=thousand Earth masses
 thousandMiles=thousand miles
