@@ -1,3 +1,4 @@
+Added a reset button underneath the simulation time readout
 Made time speed slider work across modes
 Start time speed slider at 25% instead of 50%
 Lock in alpha values for cartoon mapping when gravity is disabled, this preserves linear motion
